[gd_scene load_steps=9 format=3 uid="uid://dijywxr5vrrpq"]

[ext_resource type="Script" uid="uid://b004xknhfy13j" path="res://main_menu.gd" id="1_7vrkn"]
[ext_resource type="Texture2D" uid="uid://dn2rqrne2orfx" path="res://assets/textures/Gemini_Generated_Image_52qkus52qkus52qk.png" id="2_7vrkn"]
[ext_resource type="FontFile" uid="uid://c0cr2tk6is67c" path="res://assets/fonts/static/Roboto-Thin.ttf" id="2_fu7sn"]
[ext_resource type="FontFile" uid="uid://b803vqt3aif4m" path="res://assets/fonts/static/Roboto-Light.ttf" id="3_fu7sn"]
[ext_resource type="PackedScene" uid="uid://ddgr0fwaevyfi" path="res://fade_scene.tscn" id="5_glbon"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jix8l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_glbon"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nlkkf"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7vrkn")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_7vrkn")
expand_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_fu7sn")
theme_override_font_sizes/normal_font_size = 100
text = "STUCK"
fit_content = true
horizontal_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Start" type="MenuButton" parent="MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("3_fu7sn")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_jix8l")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_glbon")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_nlkkf")
toggle_mode = false
text = "Start"
flat = false

[node name="FadeTransition" parent="." instance=ExtResource("5_glbon")]
visible = false
layout_mode = 1

[node name="FadeTimer" type="Timer" parent="FadeTransition"]

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/Start" to="." method="_on_start_pressed"]
[connection signal="timeout" from="FadeTransition/FadeTimer" to="." method="_on_fade_timer_timeout"]
